--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,8 @@ body {
 #siteWrap {
 	width: 98%;
 	max-width: 500px;
-	margin: 0 auto 60px;
+	margin: 0 auto;
+	padding-bottom: 50px;
 }
 h1 {
 	font-family: 'Roboto Mono', monospace;
