--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ h1 {
 }
 #screen {
 	flex: 1 1 50%;
+	border: 0;
 	border-top: 1px solid #999;
 	border-bottom: 1px solid #999;
 	background: white;
@@ -41,11 +42,13 @@ h1 {
 	margin-top: 1em;
 }
 #startVal {
-	width: inherit;
+	border: 1px solid #999;
+	border-right: none;
 	flex: 1 1 10%;
 	font-size: 1em;
-	padding: 0.5em;
 	margin-top: 1em;
+	padding: 0.5em;
+	width: inherit;
 }
 #startValButton {
 	flex: 0 0 25%;
