--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,9 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 body {
 	color: #333;
 }
+input {
+	min-width: 25px;
+}
 #siteWrap {
 	width: 100%;
 	max-width: 500px;
@@ -28,15 +31,16 @@ h1 {
 	font-size: 4em;
 	padding: 1em 0;
 }
-button {
+button, .countDefault {
 	background: #e0e0e0;
 	border: 1px solid #999;
 	border-radius: 0;
+	cursor: pointer;
 }
-button:hover {
+button:hover, .countDefault:hover {
 	background: #eeeeee;
 }
-button:active {
+button:active, .countDefault:active {
 	background: #bdbdbd;
 }
 .counterFunc {
@@ -77,17 +81,27 @@ button:active {
 	flex-flow: row nowrap;
 }
 #count {
-	width: 100%;
 	font-size: 1em;
+	margin: 20px 0;
+	padding: 0;
+	width: 100%;
 }
 #count label {
-	padding-top: 13px;
+	align-items: center;
+	display: flex;
 	padding-right: 10px;
 }
 #count input {
 	border: 1px solid #999;
-	flex: 1 50%;
+	flex-grow: 1;
 	padding: 10px;
+}
+.countDefault {
+	align-items: center;
+	border-left: 0;
+	display: flex;
+	font-size: 1em;
+	padding: 10px 20px;
 }
 footer {
 	text-align: center;
@@ -127,6 +141,9 @@ footer img:active {
 @media screen and (max-width: 330px) {
 	#startVal, #startValButton {
 		flex: 1 1 100%;
+	}
+	#startVal {
+		border-right: 1px solid #999;
 	}
 	#startValButton {
 		margin-top: -1px;
